# whaleshark-reid

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-10-whaleshark-reid-01-core-engine.md  2026-04-11-whaleshark-reid-02-cli-and-orchestration.md  2026-04-12-whaleshark-reid-03-web-ui.md  2026-04-13-local-feature-matching.md
docs/superpowers/specs/: 2026-04-10-whaleshark-reid-01-core-engine.md  2026-04-10-whaleshark-reid-02-cli-and-orchestration.md  2026-04-10-whaleshark-reid-03-web-ui.md  2026-04-10-whaleshark-reid-overview.md  2026-04-13-local-feature-matching-design.md
src/whaleshark_reid/: __init__.py
src/whaleshark_reid/cli/: __init__.py  logging_config.py  main.py  run_context.py
src/whaleshark_reid/cli/commands/: __init__.py  cluster.py  embed.py  ingest.py  match_local.py  matching.py  pairx_precompute.py  project.py  rebuild_individuals.py  run_all.py  status.py
src/whaleshark_reid/core/: __init__.py  schema.py
src/whaleshark_reid/core/cluster/: common.py  dbscan.py  hdbscan.py  project.py
src/whaleshark_reid/core/embed/: miewid.py
src/whaleshark_reid/core/explain/: pairx.py
src/whaleshark_reid/core/feedback/: unionfind.py
src/whaleshark_reid/storage/: __init__.py  cluster_cache.py  db.py  embedding_cache.py  projection_cache.py  schema.sql
src/whaleshark_reid/web/: __init__.py  app.py  dependencies.py  settings.py
src/whaleshark_reid/web/routes/: map.py  (+9 more)
tests/: conftest.py  test_smoke.py
tests/cli/: conftest.py  test_cli_cluster.py  test_cli_embed.py  test_cli_exit_codes.py  test_cli_idempotency.py  test_cli_ingest.py  test_cli_main.py  test_cli_match_local.py  test_cli_matching.py  test_cli_project.py  test_cli_rebuild_individuals.py  test_cli_run_all.py  test_cli_status.py  test_logging_config.py  test_run_context.py
tests/core/: test_cluster_dbscan.py  test_cluster_hdbscan.py  test_cluster_project.py  test_cluster_stage.py  test_embed_miewid.py  test_feedback_unionfind.py  test_ingest_inat.py  test_match_lightglue.py  test_matching_pairs.py  test_metrics_distributions.py  test_schema.py
tests/fixtures/: mini_inat.csv  mini_inat_raw.csv  mini_inat_rich.csv
tests/integration/: test_full_pipeline.py
tests/storage/: test_cluster_cache.py  test_db_annotations.py  test_db_runs.py  test_db_schema.py  test_embedding_cache.py  test_pair_matches_migration.py  test_projection_cache.py
tests/web/: conftest.py  test_cluster_view.py  test_experiments_view.py  test_htmx_fragments.py  test_image_serving.py  test_list_views.py  test_local_match_frontend_hooks.py  test_local_match_routes.py  test_local_match_service.py  test_nav.py  test_pair_carousel.py  test_web_smoke.py
(+33 files in other folders)
