[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whaleshark-reid"
version = "0.1.0"
description = "Whale shark re-identification pipeline and dev-mode review app"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "numpy",
  "pandas",
  "pyarrow",
  "scikit-learn",
  "hdbscan",
  "umap-learn",
  "transformers",
  "torch",
  "pillow",
  "wbia_miew_id @ file:///workspace/wbia-plugin-miew-id",
  "typer>=0.12",
  "rich>=13",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "jinja2",
  "python-multipart",
  "pydantic-settings",
  "httpx",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
]

[project.scripts]
catalog = "whaleshark_reid.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
whaleshark_reid = ["storage/schema.sql", "web/templates/**/*.html", "web/static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
